full json support on the homepage
some visual bugs need to be fixed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/recipes/
+    - assets/recipes/recipe_list.json
   fonts:
     - family: CustomFont1
       fonts:
