--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   path: ^1.8.0
   numberpicker: ^2.1.2
   flutter_number_picker: ^1.0.1
+  dotted_border: ^2.0.0+1
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
