Started recipe page
And fixed some problems

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ flutter:
     - assets/
     - assets/recipes/
     - assets/recipes/recipe_list.json
+    - assets/recipes/recipe-images/
   fonts:
     - family: CustomFont1
       fonts:
